aligned text further and fixed header padding.

--- a/index.css
+++ b/index.css
@@ -88,11 +88,16 @@ ul {
 #test {
 	z-index: 1;
 	position: absolute;
-	top: 15%;
+	top: 0%;
+	width: 80%;
+	margin: auto;
 	left: 0%;
 	right: 0%;
 	bottom: 0%;
 	overflow: auto;
+}
+#header1 {
+	padding-top: 15%;
 }
 .temp {
 	text-align: center;
